--- a/Anonymity/01 - 家族答集/偶像这种毒.md
+++ b/Anonymity/01 - 家族答集/偶像这种毒.md
@@ -5,7 +5,7 @@
 > Last update: *20/07/2021* 
 > Links:[[自卑]] [[卑微]] [[虚荣]] [[科普资格]] [[人设指南]] 
 > Tags: 
-> 沙海拾金: [[偶像这种毒.jpg]] [[偶像这种毒.png]] [[“完美”人设.JPEG]]
+> 沙海拾金: [[偶像这种毒.jpg]] [[偶像这种毒.png]] [[完美人设.jpeg]]
 
 
   
