--- a/Anonymity/02 - 企管答集/跟对人.md
+++ b/Anonymity/02 - 企管答集/跟对人.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *28/10/2021* 
-> Links:[[一事无成]] [[农村出身]] [[利用]] [[吃喝嫖赌]] [[功罪千秋]] [[人品差]] [[老板及格线]] [[上策]] [[重感情]] [[领导力特征]] [[服从领导]] [[真的自愿]] [[想好再干]] [[居安思危]] [[培养下属]] [[培养]] [[魄力]] [[“资本家”]] [[资本家2]] [[只对我忠心]] [[解决996]]
+> Links:[[一事无成]] [[农村出身]] [[利用]] [[吃喝嫖赌]] [[功罪千秋]] [[人品差]] [[老板及格线]] [[上策]] [[重感情]] [[领导力特征]] [[服从领导]] [[真的自愿]] [[想好再干]] [[居安思危]] [[培养下属]] [[培养]] [[魄力]] [[资本家]] [[资本家2]] [[只对我忠心]] [[解决996]]
 > Tags: #方法实践SOP 
  
 
