--- a/Anonymity/03 - 第一性/游坦之.md
+++ b/Anonymity/03 - 第一性/游坦之.md
@@ -3,7 +3,7 @@
 
   > Author: #Anonymity 
 > Last update: *06/10/2021* 
-> Links:[[“纪实”]] [[Anonymity/03 - 第一性/值得一嫁]] [[所托非人]] [[授信技术]] [[抢孩子]] 
+> Links:[[纪实]] [[Anonymity/03 - 第一性/值得一嫁]] [[所托非人]] [[授信技术]] [[抢孩子]] 
 > Tags: #亲密关系 #方法实践SOP 
 
 通过看小说来得出人生教训有非常严格的限制。
