--- a/Anonymity/04 - 社科答集/不败之地.md
+++ b/Anonymity/04 - 社科答集/不败之地.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *11/07/2022* 
-> Links:[[态度最重要]] [[“我是对的”]] [[免于极端]]
+> Links:[[态度最重要]] [[我是对的]] [[免于极端]]
 > Tags: 
 
 其实这东西没什么客观性。
