--- a/Anonymity/04 - 社科答集/注目事实.md
+++ b/Anonymity/04 - 社科答集/注目事实.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *30/09/2021* 
-> Links:[[“纪实”]] [[膝盖的目的]] [[燎原幻觉]] [[怎样读新闻]]  [[女权的历史趋势]] [[学好语文]] [[逻辑思维]] [[好友杀人]] 
+> Links:[[纪实]] [[膝盖的目的]] [[燎原幻觉]] [[怎样读新闻]]  [[女权的历史趋势]] [[学好语文]] [[逻辑思维]] [[好友杀人]] 
 > Tags:   
 > 沙海拾金:[[新闻影响力.PNG]]  
 
