--- a/Anonymity/04 - 社科答集/独立调查.md
+++ b/Anonymity/04 - 社科答集/独立调查.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *02/07/2022* 
-> Links:[[认知战、信息茧房及其它]] [[我们如何战胜认知战]] [[怎样读新闻]] [[“纪实”]] [[带节奏]] [[膝盖的目的]] [[燎原幻觉]] [[信源管理]]
+> Links:[[认知战、信息茧房及其它]] [[我们如何战胜认知战]] [[怎样读新闻]] [[纪实]] [[带节奏]] [[膝盖的目的]] [[燎原幻觉]] [[信源管理]]
 > Tags: #方法实践SOP 
 
 把这个看作一种合理怀疑的案例：
