--- a/Anonymity/04 - 社科答集/诛心病.md
+++ b/Anonymity/04 - 社科答集/诛心病.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *29/05/2022* 
-> Links:[[诛心]] [[“纪实”]] [[信源管理]] [[Anonymity/01 - 家族答集/批评]] [[正确知识]] [[观点与事实]]
+> Links:[[诛心]] [[纪实]] [[信源管理]] [[Anonymity/01 - 家族答集/批评]] [[正确知识]] [[观点与事实]]
 > Tags: 
 
 挺有道理的啊。
