--- a/Anonymity/04 - 社科答集/资本家2.md
+++ b/Anonymity/04 - 社科答集/资本家2.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *03/08/2021* 
-> Links:[[“资本家”]] [[Anonymity/02 - 企管答集/越界]] [[想好再干]] [[未来十年]]
+> Links:[[资本家]] [[Anonymity/02 - 企管答集/越界]] [[想好再干]] [[未来十年]]
 > Tags:
 
 我发现很多人对资本家身份的定义并不清楚，常把资本家看作“老板”的代称。
