--- a/Anonymity/04 - 社科答集/轻佻.md
+++ b/Anonymity/04 - 社科答集/轻佻.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *18/12/2021* 
-> Links:[[严肃]] [[“我是对的”]] [[辩论]] [[史料不可信]] [[自我怀疑]] [[世界史]] [[Anonymity/01 - 家族答集/批评]] [[批评与赞美]] [[历史的燃料]] [[政治的科学]] [[条理]] [[合理1]] [[WhatThen]]
+> Links:[[严肃]] [[我是对的]] [[辩论]] [[史料不可信]] [[自我怀疑]] [[世界史]] [[Anonymity/01 - 家族答集/批评]] [[批评与赞美]] [[历史的燃料]] [[政治的科学]] [[条理]] [[合理1]] [[WhatThen]]
 > Tags:  
 
 首先要明确一点——作为一种总的原则，基于学术的严谨论证和实事求是的精神，挑战一些政治正确然而不符合实际的观点，这确实是学者和知识分子天生的使命。
