--- a/Anonymity/04 - 社科答集/阶层与阶级.md
+++ b/Anonymity/04 - 社科答集/阶层与阶级.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *15/05/2022* 
-> Links:[[财富观]] [[仇穷与仇富]] [[几代人的努力]] [[望山行路]] [[“我的资源”]] [[富得不幸福]] 
+> Links:[[财富观]] [[仇穷与仇富]] [[几代人的努力]] [[望山行路]] [[我的资源]] [[富得不幸福]] 
 > Tags: 
 
 阶级是按收入模式来分的。
