--- a/Anonymity/04 - 社科答集/黑神话-悟空.md
+++ b/Anonymity/04 - 社科答集/黑神话-悟空.md
@@ -1,4 +1,4 @@
-# 黑神话：悟空
+# 黑神话-悟空
 [如何评价游戏科学放出的单机游戏《黑神话：悟空》实机演示？](https://www.zhihu.com/question/415822945/answer/1422953059)
 
 > Author: #Anonymity 
