--- a/Anonymity/09 - 神学答集/尼采.md
+++ b/Anonymity/09 - 神学答集/尼采.md
@@ -2,7 +2,7 @@
 
 > Author: #Anonymity 
 > Last update: *02/07/2022* 
-> Links:[[“上帝已死”]] [[永劫回归]] [[地狱这东西]] [[能力不足]] [[谴责恶行]] [[遥远的救世主]] 
+> Links:[[上帝已死]] [[永劫回归]] [[地狱这东西]] [[能力不足]] [[谴责恶行]] [[遥远的救世主]] 
 > Tags: #待命名TBN 
 
 要不然他为什么会疯？
