--- a/Anonymity/13 - 百年未有之变局/欧洲议会.md
+++ b/Anonymity/13 - 百年未有之变局/欧洲议会.md
@@ -2,7 +2,7 @@
 
 > Author: #Anonymity 
 > Last update: *10/06/2022* 
-> Links:[[“国际巨头”]] [[成功药]] [[泽连斯基]] [[欧盟的成色]] [[快速反应]]
+> Links:[[国际巨头]] [[成功药]] [[泽连斯基]] [[欧盟的成色]] [[快速反应]]
 > Tags: #待命名TBN 
 
 众所周知，
