--- a/Anonymity/01 - 家族答集/以爱应恨.md
+++ b/Anonymity/01 - 家族答集/以爱应恨.md
@@ -4,7 +4,7 @@
 
 > Author: #Anonymity 
 > Last update: *10/07/2021* 
-> Links:[[爱]] [[对人不对事]] [[敌人]] [[道德]] [[真正善良]] [[善良与现实]] [[祷告观]] [[财富观]] [[“我的资源”]]
+> Links:[[爱]] [[对人不对事]] [[敌人]] [[道德]] [[真正善良]] [[善良与现实]] [[祷告观]] [[财富观]] [[我的资源]]
 > Tags: 
 
 
