--- a/Anonymity/01 - 家族答集/信源管理.md
+++ b/Anonymity/01 - 家族答集/信源管理.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:[[知乎遗风]] [[“纪实”]] [[可信标准]] 
+> Links:[[知乎遗风]] [[纪实]] [[可信标准]] 
 > Tags: #方法实践SOP  
 
 
