--- a/Anonymity/01 - 家族答集/爱的底线.md
+++ b/Anonymity/01 - 家族答集/爱的底线.md
@@ -5,7 +5,7 @@
 > Last update: *10/06/2022* 
 > Links:[[凭爱分手]] [[无爱信仰]] [[爱与自由]] [[重组家庭的难题]] [[爱]]
 > Tags: 
-> 沙海拾金: [[“简洁策略”]]
+> 沙海拾金: [[简洁策略]]
 
 爱是自带底线的。
 
