--- a/Anonymity/01 - 家族答集/耽误了五六年.md
+++ b/Anonymity/01 - 家族答集/耽误了五六年.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *03/08/2021* 
-> Links:[[Anonymity/01 - 家族答集/战胜抑郁]] [[悲观与乐观]] [[运气]] [[痛苦根源]] [[保持自我]] [[保持快乐]] [[长时间保持理性]] [[苦熬]] [[苦熬 1]] [[解压]] [[“大众心理学”]] [[人格分型]] [[简明格言]] [[不是肝炎]] [[自我怀疑]] [[一事无成]] [[平庸]] [[逃避伤害]] [[过渡性价值观]] [[烦躁]] [[励志]]
+> Links:[[Anonymity/01 - 家族答集/战胜抑郁]] [[悲观与乐观]] [[运气]] [[痛苦根源]] [[保持自我]] [[保持快乐]] [[长时间保持理性]] [[苦熬]] [[苦熬 1]] [[解压]] [[大众心理学]] [[人格分型]] [[简明格言]] [[不是肝炎]] [[自我怀疑]] [[一事无成]] [[平庸]] [[逃避伤害]] [[过渡性价值观]] [[烦躁]] [[励志]]
 > Tags:  
   
 抑郁症本质上犹如一种精神性的自体免疫病，那些促进你“奋斗”“努力”的因素——譬如心理优越感、权力感、控制感、感官享乐、意识形态快感等等，在平时起着驱动你运作的关键作用，但一旦遇上过敏原，它们自己就会转而对你自己发起攻击。
