--- a/Anonymity/02 - 企管答集/垄断的诅咒.md
+++ b/Anonymity/02 - 企管答集/垄断的诅咒.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:[[“资本家”]] [[资本家2]] [[资本家的剥削]]
+> Links:[[资本家]] [[资本家2]] [[资本家的剥削]]
 > Tags: 
 > 沙海拾金: [[降服垄断.PNG]]
 
