--- a/Anonymity/04 - 社科答集/咄咄逼人.md
+++ b/Anonymity/04 - 社科答集/咄咄逼人.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *03/08/2021* 
-> Links:[[Anonymity/13 - 百年未有之变局/大国博弈]] [[西方 & 东方]] [[多好算好]] [[中美脱钩]] [[中国的规模]] [[中国基建]] [[气候异常时代]] [[低端产业]] [[全球化与失业]] [[全球化]] [[中国人的全球化]] [[“国际巨头”]] [[撤离中国]] [[计划竞争]]
+> Links:[[Anonymity/13 - 百年未有之变局/大国博弈]] [[西方 & 东方]] [[多好算好]] [[中美脱钩]] [[中国的规模]] [[中国基建]] [[气候异常时代]] [[低端产业]] [[全球化与失业]] [[全球化]] [[中国人的全球化]] [[国际巨头]] [[撤离中国]] [[计划竞争]]
 > Tags:#方法实践SOP 
 
 中国现在的策略就是逼迫美国在被动局面下升级冲突。
