--- a/Anonymity/04 - 社科答集/客观理性评价.md
+++ b/Anonymity/04 - 社科答集/客观理性评价.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *08/04/2022* 
-> Links:[[何为客观]] [[理性的代价]] [[逻辑思维]] [[注目事实]] [[“纪实”]] [[膝盖的目的]] [[燎原幻觉]] [[怎样读新闻]]  
+> Links:[[何为客观]] [[理性的代价]] [[逻辑思维]] [[注目事实]] [[纪实]] [[膝盖的目的]] [[燎原幻觉]] [[怎样读新闻]]  
 > Tags: 
 
 所谓“客观理性评价”，其实就是“多少也要找点缺点的评价”的江湖黑话。
