--- a/Anonymity/04 - 社科答集/政治.md
+++ b/Anonymity/04 - 社科答集/政治.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:[[“政治信仰”]] [[政治的科学]] 
+> Links:[[政治信仰]] [[政治的科学]] 
 > Tags:  #方法实践SOP 
  
 
