--- a/Anonymity/04 - 社科答集/没人性.md
+++ b/Anonymity/04 - 社科答集/没人性.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *24/08/2021* 
-> Links: [[道德]] [[良知]] [[真正善良]] [[“虐猫权”]] [[虐猫]] [[救猫救画说]]
+> Links: [[道德]] [[良知]] [[真正善良]] [[虐猫权]] [[虐猫]] [[救猫救画说]]
 > Tags: 
  
 
