--- a/Anonymity/08 - 文艺答集/中西哲学.md
+++ b/Anonymity/08 - 文艺答集/中西哲学.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:[[“哲学家”]] [[学习哲学 - 之一]] [[学习哲学 - 之二]] [[学习哲学 - 之三]] [[喜欢哲学]] [[爱与神哲学]] [[艺术与哲学]]
+> Links:[[哲学家]] [[学习哲学 - 之一]] [[学习哲学 - 之二]] [[学习哲学 - 之三]] [[喜欢哲学]] [[爱与神哲学]] [[艺术与哲学]]
 > Tags:   
 
  
