--- a/Anonymity/13 - 百年未有之变局/张冠李戴.md
+++ b/Anonymity/13 - 百年未有之变局/张冠李戴.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *27/02/2022* 
-> Links:[[学好语文]] [[条理]] [[文科生]] [[“纪实”]]
+> Links:[[学好语文]] [[条理]] [[文科生]] [[纪实]]
 > Tags: 
 
 没人希望有战争，甚至发动战争、主动出击的一方都不希望有战争。就算是主动出征的一方、也会说“不战而屈人之兵，善之善者也”。
