--- a/Anonymity/04 - 社科答集/报案问题.md
+++ b/Anonymity/04 - 社科答集/报案问题.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *11/09/2021* 
-> Links:[[条理]] [[公权力]] [[乱伦]] [[法庭大忌]] [[好友杀人]] [[遗言纸条]] [[不建天国]] [[本质]] [[法律漏洞]] [[罪与罚]] [[罪与罚1]] [[赎罪]] [[功罪千秋]] [[一秒钟]] [[奇葩法]]
+> Links:[[条理]] [[公权力]] [[乱伦]] [[法庭大忌]] [[好友杀人]] [[遗言纸条]] [[不建天国]] [[本质]] [[法律漏洞]] [[获罪于天]] [[罪与罚]] [[赎罪]] [[功罪千秋]] [[一秒钟]] [[奇葩法]]
 > Tags:  
 
 
