--- a/Anonymity/04 - 社科答集/非法越线.md
+++ b/Anonymity/04 - 社科答集/非法越线.md
@@ -1,10 +1,9 @@
-# 非法越线
-*9 月 7 日印军再次非法越线鸣枪威胁，西部战区的回应释放了什么信号?*
+[9 月 7 日印军再次非法越线鸣枪威胁，西部战区的回应释放了什么信号？](https://www.zhihu.com/question/419988782/answer/1461482480)
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Links:[[印度政治]]
-> Tags:   
+> Tags:   #待命名TBN 
 
  
 恐怕目前最简单也是对印度最仁慈的方案，是在争议地区构建雷区，巩固缓冲带。
