--- a/Anonymity/09 - 神学答集/罪与罚.md
+++ b/Anonymity/09 - 神学答集/罪与罚.md
@@ -1,62 +1,112 @@
 # 罪与罚
-*为什么人做了坏事要去基督那祈祷，难道基督真会原谅坏人做的坏事吗？*
+*上帝为什么不立即消除地球上所有人心中的恶和罪并且1秒钟内让地球就变成天堂？*
 
 > Author: #Anonymity 
 > Last update: *26/07/2021* 
-> Links:[[罪与罚1]]
-> Tags:  
+> Links:[[获罪于天]]
+> Tags:    
   
 
-要明白这个问题，就要理解基督教世界的罪罚观念。
+这就意味着我们需要谈论什么是恶和罪。
 
-我来给你们画一个像吧，把一个中世纪凡人的心挖出来切开给你们看。
+很显然，既然上帝是至高无上的存在，那么人类在恶和罪的问题上自然不拥有最终裁决权。除非人类的标准等于上帝的标准，否则但有分歧，都要以上帝的标准为最终标准。否则上帝的至高地位就不存在了，题目成立的前提就被自己击溃了。
 
-“人间法庭的审判只是现世层面的事情。人间的法律并不具有正义性。
+因此，首要的一个问题是：上帝的罪恶观与人类的罪恶观是不是有区别？
 
-国王可能把所有的森林、沼泽、湖泊宣布为自己所有，这只需要一纸圣谕，从而把我们这些要在森林里讨生活的猎人都变成罪犯。
+按照基督教的信理，这种区别是巨大的——那就是**死是不是一件坏事？**
 
-你的某些法律的确和上帝的法律条文一样，但是来审判的人却是你的亲戚朋友。审讯的规则也罢、规则的解释也罢，也都由得你。
+对人类而言，死亡是终极恶事。这个立场是人类无法抛弃的。任何人都不能凭着自己去主张“死亡并不算坏事”，因为那立刻会招致一个简单的质问——那么你为什么要求生？
 
-你也宣称你的王权来自天授，既然是你能击败群雄坐在位置上，说明上帝选择了你。但是被你推落王位的那一位，之前也是这么说的。
+你为什么要找工作？你为什么要学习？你为什么要吃饭？你为什么要睡觉？你为什么要求偶？你为什么要锻炼身体？你为什么要求医问药？你为什么还要与人说任何话？
 
-所以，我对于我在你眼里是不是有罪、是不是该死的关心，实际上是事务性的，是基于成本风险计算的，是用风险效用原则去进行管理的。
+仅仅只是出声回答这个问题，本身就已用行动否定了“死亡并非坏事”立场的真诚性。
 
-我有本事犯下，我有本事逃掉，那我就不必因为在你眼里看为有罪而有什么可在意的。
+注意，不是说人不能看见这个置生死于度外的境界，也不是说人不能在一时冲动或者形势所逼时临时的被围困在这个立场上（譬如自杀情绪者与战斗激情者）。但是这两种情况都不能视为人在真诚的持有这个观点。
 
-我没本事逃掉，落到你手里了，那也就愿赌服输，只不过是人世间的常态。
+人类作为一个整体，无法诚恳的持有“导致人类死亡的事情在道德上可以为善”这样的道德观。因为人类并没有做到（甚至也不能凭自己做到）对永生相信无疑。人若是能确信无疑的相信永生，那么死亡在法理上的任何罪恶性都会被清洗。“杀死一个人”将不构成罪恶，“死亡”也就不构成任何意义上的不幸。
 
-归根到底，这只不过是现世问题，是会随着死亡而消散的暂时的问题，是解决不了眼一闭也解决了的问题。
+但是**人类很显然处在不能接受这种假设的状态下**。
 
-人类叫我罪犯，只不过是因为人自己及其同谋者的利益。把你们自己称为“大多数”、“总体利益的代表”，只不过是你们有钱有势掌握了喉舌之便利的结果。这没有任何真正值得我为之不安的价值。
+这样说也许太抽象，我们具体一点：比如遇到了大饥荒，你面临两个选择。选择A，坚决不偷不抢，饿死；选择B，偷了抢了，于是饿死的几率减小。
 
-这是生存斗争问题。并不简单的因为你颁布了什么法律，在这个法律下宣布我有罪，我就真的有罪。
+在上帝的价值观里面，祂给了你出路——别偷别抢，饿死，上天堂。为什么这是恶事？
 
-追根到底，人人为了生存。在没有接受死亡的勇气的时候，事到临头都要为逃避死亡受罪的试探。
+在你的眼里：为什么你要允许大饥荒存在？！逼得我犯罪？！
 
-为了生存而犯下人类的法，被人类的法庭定了人类的罪，因为没有足够的武力对抗、没有足够的智力逃脱而被惩罚，那只是同类之间的竞争出了结果而已，我没有什么良心负担。
+在被你偷被你抢的人眼里：你为什么要允许别人偷我抢我？！
 
-我真正的担心的是在这个过程中犯下了上帝眼里的罪，担心的是在永生的法庭上不能得到宽免。
+在上帝眼里：被偷被抢，但你还是不偷不抢，你饿死了，上天堂。为什么这是恶事？
 
-人间的痛苦只不过是瞬间的事，我只要舍得不受，自然可以不受。**何况为了恐惧受人的罚而要忍受的生活，本来就比那刑罚更痛苦，否则我又为何会去“犯罪”呢？**所以你们怎么以惩罚相威胁对我都是无用，因为本来死对我反倒是一种解脱。
+这两类人为什么会觉得这“不是恶事”的结论荒谬，因为他们首先就不接受永生这个预设。于是，他们很自然的要接受这样的假设——如果人面临死亡，则一切法律和正义都得让路。
 
-我唯一忧虑的是在上帝的眼里有罪，那是没有尽头的，无法靠忍受来承受、无法靠逃亡和自杀来躲避的。
+你不能勉强面对死亡风险的人为法律和正义自愿献身，否则你就和“上帝”一样坏了呀。
 
-所以我要祈祷上帝能原谅我为生存不得不行的事，原谅我出于人自己战胜不了的软弱和愚蠢所难以避免的罪行。我无力自我克制不去做那些事而接受我自己、我家人，我所爱的人、我所爱的后代的饥馑和死亡，但我并不因此就认为我是无需寻求你的原谅的。
+问题是，你一旦允许人有这条豁免之路，那么问题来了——**如何定义面临生死威胁**？
 
-我不求逃脱你一切的惩罚，只求你给予我一切我应得的惩罚之后，能顾念我毕竟对你无所隐瞒、无所逃避和对你敬畏，对你信赖的心，能在那些千年万年的火烧之后最终宽恕我。
+**你觉得刀架在脖子上才算，对吗？**
 
-那就是能让我晚上睡得着，早上起得来的唯一的指望了。”
+**不好意思，**
 
-你们要注意一个至关重要的差别——
+**有人认为有同行在对门开店，就算；**
 
-**这种忏悔里面是没有包涵“我可以不受惩罚”的诉求的。**
+**有仇的邻居多生了个儿子，就算；**
 
-原谅之中根本没有包涵“不必受惩罚”的含义。
+**当众不给自己面子，就算；**
 
-原谅指的是**不会让结果定格在惩罚上**。
+**大庭广众之下指出他宁死不肯认的错，就算；**
 
-只要惩罚之后仍会和好——则惩罚本身就不再是目的和结果，而只是合好的手段和过程。
+**被他看上、他苦苦追求非其不娶/不嫁、否则宁肯去死，而对方不答应，就算。**
 
-甚至，因为是这样，于是在本质上**即使在惩罚的过程中这种和好也没有中断。**
+人将威胁自己生存的视为恶，将有利于自己生存的视为义，意味着人的公义不是看事情，而是看己身。人类的正义观，是从本质上就有去不掉的投机性和双重标准性。
 
-**不以抛弃为终局的惩罚，本身就是一种爱，一种移去亏欠的重负的爱。**
+**无论如何构建集体价值观，这一构建中都不允许存在一种合法的逻辑能证明敌人消灭我们是正义的行为。**
+
+**这一命题必须为假。**
+
+定了这结论，再构建理论。这看似很简单，其实却是一切人类自建的正义观的穹顶总是合不拢的根源。一切基于人类利害而制定的法律，都有着深刻的置正义为第二位的虚伪性，最终只好摆出“法律就是统治工具”的论调来抵挡深刻的追问。
+
+我们不能责怪人类。**人只是想活着，有错吗？你能怪人无论如何都想活着吗？**
+
+但如果这就是正义无论如何也要绕过的G点，那么我们就只好给“为了活命而行的事情”开绿灯。**我们开的这个口子，使得大量实质上的犯罪变成了一个技巧问题，变成了一种“如何将我的攻击行为与生存的必须紧密联系起来”的智力竞赛。**
+
+这些会导致无穷尽的痛苦的行为，在人类的法典里，将是不得不被免于追究的罪。
+
+我们出于恐惧，杀死全然无辜的“敌人”，轰炸别国的国土，先发制人，争取生存空间，威胁、欺骗、操纵、剥夺别人决定自己命运的权利。我们得了绝症，则世间一切法律都瞬间失效了。我们可以买卖假药，我们可以走私，我们可以车匪路霸，我们可以造假。
+
+——“领导，我们只是想活着，行吗？”
+
+**接下来呢？我们原谅了自己。**
+
+**我们能不原谅吗？**
+
+**但是我们真的能说这就是公义的吗？仅仅只是因为这些行为于我们有利，我们选择聪明的闭嘴罢了。**
+
+因为这一点区别，人类与基督教上帝对于善恶的观念就会有根本的分歧。人类视为罪恶的很多事情，在上帝看来并无罪恶可言。人类切齿必要惩罚的，在上帝看来并没有什么特别的罪恶。上帝视为罪恶的事情，在人类看来却有可能是“生存的必须”，是“生活的无奈”，是不得不放弃追究的东西，甚至可能是一种快乐，一种福利。
+
+为何上帝不立刻消除人类的罪恶，造就天堂？至少我们可以想到一个最简单的理由——
+
+## 因为在人类没能改变自己的价值观之前，这个天堂对人类**无异于地狱**。
+
+---
+
+那么，上帝为什么不动用自己的大能直接改变人类的思维，直接将人类“调谐”为会将天堂感受为天堂的新人呢？
+
+要这样设想，需要首先真切地思考这要是具体实施的话会是什么样的效果——人在一秒钟之后价值观发生了全然的转变，但是很显然为了保持身份的逻辑必要，这个人的一切历史记忆仍然需要保留连续。下一秒发生的会是什么呢？——是身份的崩溃和人格的湮灭。因为你将无法将自己的价值观与自己记忆中的作为、你的感情、你现在的轨迹协调起来。你完全不能理解你前半生所做的每一件事的理由和动机，因为完全不能理解，你将开始怀疑那是幻觉。你好像在看一个你所完全不理解的人形动物所表演的全然没有逻辑的录像。尽管这个角色长着你的脸，你也将无法**感受**到这个人就是你。你为什么会努力考试？你为什么挨了那样的批评会流泪？你为什么会觉得这个人是值得爱的？你为什么会憎恨那个人？你为什么会有这样的配偶和同志？
+
+一切都崩溃了，包括你自己的自我存在感。你将感到强烈的“寄居在他人的记忆中”的监禁感。你将不认为这个躯壳是你的躯壳，不相信这个经历是你的经历，你将不认同他人将这个躯壳的前主人的一切义务加诸在你身上，你也不认同你将来的作为可以归功于这副躯壳的前主人。
+
+## **这副躯壳的前主人已经灭亡。**
+
+你所请求的，如果上帝真的做了，那么这个结局也已经不再是属于现存人类的戏剧的一部分了。人类的全部历史已经在那一秒开始之前全剧落幕。接着上演的，是与前一剧集毫无关联的第二部新剧了。这些寄存在你躯壳里的“你”，将会摈弃你的存在。他们的福利与你毫无关联。你拥有的只是一种毫无意义的“延续”的名义。
+
+如果上帝真的存在，上帝为什么没有这么做？
+
+**因为怜悯啊。**
+
+**因为祂特么就是个烂好人。**
+
+**只肯给你们讲可怕的故事，从来舍不得真的按他自己所说的径直报应在人的身上。因为他总是说了打而终于还是没打，人类在嘲笑祂“不可信”。**
+
+——“你这样发怒合乎于理吗？”  
+——“我发怒乃至于死都合理。”
+
