--- a/Anonymity/10 - “就你机灵”系列/欠钱不还.md
+++ b/Anonymity/10 - “就你机灵”系列/欠钱不还.md
@@ -2,7 +2,7 @@
 
 > Author: #Anonymity 
 > Last update: *11/07/2022* 
-> Links:[[罪与罚]] [[忏悔免罪]]
+> Links:[[获罪于天]] [[忏悔免罪]]
 > Tags:  #待命名TBN 
 
 感谢上帝
