--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -5,6 +5,80 @@
 > Links:
 > Tags: 
 
+
+说起来也许你们难以置信，但实际上绝大部分的丑陋，其根源是令人不寒而栗的自恋和傲慢。  
+
+因为ta根本不是没有努力的空间，而是基于一种“我已经尽了全部可能的努力”的心态，心安理得的蹲守在自己的安乐窝里。
+
+——[《自下人一等》](https://www.zhihu.com/question/443354148/answer/2512755815)
+
+---
+
+“鞠躬尽瘁，死而后已”，讲的根本不是牺牲精神，而是真正的享乐主义。
+
+
+——[《退什么休》](https://www.zhihu.com/question/548180454/answer/2623972729)
+
+--- 
+
+这个世界上存在的最大规模的愚蠢，就苦也经了、亏也吃了、事也做了，一秒钟都没跑掉，一分懒没偷着，但除了满腹怨气，什么都没落下。
+
+自己消极抵抗，把一段生命搞得没有任何收获，用来“证明”xxxx“毫无意义”。然后用这种“证据确凿”的所谓“毫无意义”，想去“控诉”、“报复”那些将这些经历“强加”于自己身上的人。自以为这叫“反抗精神”，甚至“革命精神”。
+
+这只不过是一种纯粹的愚蠢。
+
+——[《天地无用》](https://www.zhihu.com/question/547629190/answer/2625489912)
+
+---
+
+何谓“有道德”？是指你这个人的行为所体现出来的策略系统有与一切优良方法论相通的共性。
+
+你所做的，与天地间的大道相通。
+
+顺天者昌，逆天者亡，我站在你的对立面是不现实而愚蠢的，因此评定你为坏或者恶是没有意义的。
+
+因而，对你的评价必须、也必然是美与善。
+
+对你的行为，只能帮助而不能阻挡。
+
+——[《道德》](https://www.zhihu.com/question/30536604/answer/1867200559)
+
+--- 
+
+“无道德”在本质意义上并不是一个“善恶”审判，而是一个有效性审判。它审判的对象其实根本就不是动机本身，而是方法论。
+
+——[《道德》](https://www.zhihu.com/question/30536604/answer/1867200559)
+
+--- 
+
+自己对自己诚实、对事实诚实，不要自欺欺人，选定一个有价值的理想，然后鞠躬尽瘁、有死而已，这是人最好的活法之一。
+
+——[《反清复明》](https://www.zhihu.com/question/417593306/answer/1456499208)
+
+---
+
+按照自己想象的命运来确信自己的命运，是一种不自知的傲慢。
+
+——[《爱的好处》](https://www.zhihu.com/question/399284396/answer/1825400028)
+
+---  
+
+以谦卑的态度持有最高贵的观点，人依然是谦卑的。以傲慢的态度持有最卑贱的观点，人依然是傲慢的。
+
+——[《爱的好处》](https://www.zhihu.com/question/399284396/answer/1825400028)
+
+---  
+
+剧中的任何一个角色，都可能是你。
+
+哪怕那个角色的性别都和你不一样。
+
+因为你所爱的人，就是你不可分割的一部分。
+  
+——[《爱的好处》](https://www.zhihu.com/question/399284396/answer/1825400028)
+
+---
+
 把一切外来作用都转化为正面推动的人，无论家庭给ta什么影响，都是正面影响。
 
   
