--- a/摘抄本/比喻摘录.md
+++ b/摘抄本/比喻摘录.md
@@ -776,4 +776,27 @@ ta们嘴上说的是政治，其实喊的是寂寞而已。
 
 会把“抱起团来靠暴力威胁来不准别人自私”称为“集体主义”的人，其实既不知道什么叫集体，也不清楚什么叫主义，而只是往衣服夹层里塞旧报纸取暖的苦人罢了。嘴都冻得乌青，怎么和你谈论今日头条？
 
+——禁林——
+
+艺术专业自己是根本不在乎什么裸露、性感、道德、真实之类的界限的。在探索“美的其他可能”时，这些被加诸在人类身上的“行政管制”往往恰恰是艺术家容易获得斩获的方向。就像怪物猎人当然会去禁林，难道去动物园捕猎异兽吗？
+
+——直线飞行——
+
+心智发育越不成熟的人，越会对自己的一生有一个坚定的、固执的想象。
+
+基于这个想象，ta会以此刻为起点、以平均寿命终点为终点，给每一刻的自己设定一个预定状态。
+
+在这个阶段，尽管人已经有了远胜于其他动物的思维技巧，但却在最根本的、但却是抽象的、复杂的问题上——例如敌/友、真/假、正/邪、利/害——仅仅付诸于自己的本能，像一只蜜蜂被花香俘获那样“直线飞行”。
+
+而这种行为的最大的要害，就在于迷信——或者不如说尚未幻灭于——自己对命运的下意识预测。
+
+按照自己想象的命运来确信自己的命运，是一种不自知的傲慢。
+
 ——
+
+  
+  
+作者：秦绮徽  
+链接：https://www.zhihu.com/question/20009520/answer/2126305023  
+来源：知乎  
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
