--- a/Anonymity/01 - 家族答集/进步退步.md
+++ b/Anonymity/01 - 家族答集/进步退步.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *28/10/2021* 
-> Links:[[滚滚向前]] [[非常之“非常”]] [[世界史]] [[自然法]] [[门当户对]] [[家族]] [[Anonymity/04 - 社科答集/终极目标]] [[游戏史观]] [[礼崩乐坏]] [[不建天国]] [[皆有其时]]
+> Links:[[滚滚向前]] [[非常之非常]] [[世界史]] [[自然法]] [[门当户对]] [[家族]] [[Anonymity/04 - 社科答集/终极目标]] [[游戏史观]] [[礼崩乐坏]] [[不建天国]] [[皆有其时]]
 > Tags:   
 
 从1到2、到4.5、到98是进步，从98到96、到80、到25.6，叫退步——这很容易理解，很容易想象。
