--- a/Anonymity/03 - 第一性/临终一面.md
+++ b/Anonymity/03 - 第一性/临终一面.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:[[下药]] [[为“爱”妥协]]
+> Links:[[下药]] [[为爱妥协]]
 > Tags:   #亲密关系
 
 你觉得不合适，大概是他的那个提法不合适——我估计他是想要你以“孙媳妇”的身份去。
