--- a/Anonymity/03 - 第一性/紧追不放.md
+++ b/Anonymity/03 - 第一性/紧追不放.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:[[恋爱原理]] [[尊重]] [[不抱怨]] [[爱的痛苦]] [[爱的好处]]  [[Anonymity/03 - 第一性/爱情 - Romance]]  [[爱的资格]] [[无条件的爱]] [[优秀与被爱]] [[前途与爱情]] [[理性的爱]] [[不配被爱]]  [[为“爱”妥协]]  [[爱怕了]] [[爱无筹码]] [[爱与自由]] [[爱与神哲学]]  
+> Links:[[恋爱原理]] [[尊重]] [[不抱怨]] [[爱的痛苦]] [[爱的好处]]  [[Anonymity/03 - 第一性/爱情 - Romance]]  [[爱的资格]] [[无条件的爱]] [[优秀与被爱]] [[前途与爱情]] [[理性的爱]] [[不配被爱]]  [[为爱妥协]]  [[爱怕了]] [[爱无筹码]] [[爱与自由]] [[爱与神哲学]]  
 > Tags: #亲密关系 
 
  
