--- a/Anonymity/04 - 社科答集/不存在的如果.md
+++ b/Anonymity/04 - 社科答集/不存在的如果.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *13/10/2021* 
-> Links:[[滚滚向前]] [[非常之“非常”]] [[历史必然]] [[游戏史观]] [[礼崩乐坏]] [[Anonymity/04 - 社科答集/终极目标]] [[国教1]]
+> Links:[[滚滚向前]] [[非常之非常]] [[历史必然]] [[游戏史观]] [[礼崩乐坏]] [[Anonymity/04 - 社科答集/终极目标]] [[国教1]]
 > Tags:    
 
 根据韩国现在发展不错而朝鲜比较落后来推断朝鲜战争的正义性是没有意义的。
