--- a/Anonymity/04 - 社科答集/性侵危机.md
+++ b/Anonymity/04 - 社科答集/性侵危机.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *13/11/2021* 
-> Links:[[神职人员犯罪]] [[Sin]] [[对人类失望]] [[贞操无价]] [[忏悔免罪]] [[罪与罚]] [[道法自然]] [[价值框架]]
+> Links:[[神职人员犯罪]] [[Sin]] [[对人类失望]] [[贞操无价]] [[忏悔免罪]] [[获罪于天]] [[道法自然]] [[价值框架]]
 > Tags:   
   
 得出这个结论所采用的估计算法具体是什么内容？谁来提供一个详情链接？结论建议先放放，先确认一下得出结论的具体方法。
