--- a/Anonymity/04 - 社科答集/扫黑除恶.md
+++ b/Anonymity/04 - 社科答集/扫黑除恶.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *17/06/2022* 
-> Links:[[历史必然]] [[历史的燃料]] [[非常之“非常”]] [[滚滚向前]]
+> Links:[[历史必然]] [[历史的燃料]] [[非常之非常]] [[滚滚向前]]
 > Tags: 
 
 其实，每逢经济形势不好或者社会气氛紧张，捞偏门的老大们都要当点心，**因为这意味着扫黑除恶的季节很快到了**。
