--- a/Anonymity/04 - 社科答集/末日.md
+++ b/Anonymity/04 - 社科答集/末日.md
@@ -4,7 +4,7 @@
  
 > Author: #Anonymity 
 > Last update: *13/10/2021* 
-> Links:[[世界史]] [[非常之“非常”]] [[电车难题]] [[伟大的自私]] [[柔者为师]]
+> Links:[[世界史]] [[非常之非常]] [[电车难题]] [[伟大的自私]] [[柔者为师]]
 > Tags:   
 
 你见过历史上有哪个政府公布末日吗？
