--- a/Anonymity/07 - 军事技术与艺术/致命危机.md
+++ b/Anonymity/07 - 军事技术与艺术/致命危机.md
@@ -2,7 +2,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
-> Links:[[进化王]] [[危险迹象]] [[非常之“非常”]]
+> Links:[[进化王]] [[危险迹象]] [[非常之非常]]
 > Tags: #待命名TBN 
 
  
