--- a/Anonymity/09 - 神学答集/天堂与地狱.md
+++ b/Anonymity/09 - 神学答集/天堂与地狱.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *06/10/2021* 
-> Links:[[地狱这东西]] [[Sin]] [[励志]] [[因果报应]] [[对人类失望]] [[抑郁的潮]] [[忏悔免罪]] [[平庸]] [[恶魔]] [[悲观与乐观]] [[无错]]  [[简明格言]] [[罪与罚]] [[罪与罚1]] [[脱困]] [[虚伪]] [[一事无成]]
+> Links:[[地狱这东西]] [[Sin]] [[励志]] [[因果报应]] [[对人类失望]] [[抑郁的潮]] [[忏悔免罪]] [[平庸]] [[恶魔]] [[悲观与乐观]] [[无错]]  [[简明格言]] [[获罪于天]] [[罪与罚]] [[脱困]] [[虚伪]] [[一事无成]]
 > Tags: #方法实践SOP    
 
 我来把天堂和地狱都指给你们看：
