--- a/Anonymity/13 - 百年未有之变局/人民战争.md
+++ b/Anonymity/13 - 百年未有之变局/人民战争.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *31/03/2022* 
-> Links:[[历史的燃料]] [[下台]] [[快开慢走]] [[滚滚向前]] [[非常之“非常”]] [[停战条件]] [[俄乌战争]] [[厌倦]]
+> Links:[[历史的燃料]] [[下台]] [[快开慢走]] [[滚滚向前]] [[非常之非常]] [[停战条件]] [[俄乌战争]] [[厌倦]]
 > Tags: 
 
 关于人民战争这事，俄罗斯这次的战略其实可以描述为一种双拒止结构。
