--- a/Anonymity/13 - 百年未有之变局/收尾.md
+++ b/Anonymity/13 - 百年未有之变局/收尾.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *06/08/2022* 
-> Links: [[伊于胡底]] [[世界史]] [[非常之“非常”]] [[滚滚向前]]
+> Links: [[伊于胡底]] [[世界史]] [[非常之非常]] [[滚滚向前]]
 > Tags: 
 
 什么叫事情的“尾”？
