--- a/Anonymity/01 - 家族答集/失望.md
+++ b/Anonymity/01 - 家族答集/失望.md
@@ -1,5 +1,5 @@
 # 失望
-## [关于失望](https://zhuanlan.zhihu.com/p/549210717)
+[关于失望](https://zhuanlan.zhihu.com/p/549210717)
 
 > Author: #Anonymity 
 > Last update: *06/08/2022* 
