--- a/Anonymity/01 - 家族答集/有福气.md
+++ b/Anonymity/01 - 家族答集/有福气.md
@@ -1,7 +1,7 @@
 # 有福气
-如何定义有福气？
+*如何定义有福气？*
 
- > Author: #Anonymity
+> Author: #Anonymity
 > Last update: *25/07/2021* 
 > Links:[[运气]] [[Anonymity/01 - 家族答集/温柔]] [[至勇]] [[恋爱原理]] [[爱]] [[学习的快乐]] [[自然法]]
 > Tags:  #方法实践SOP  
