--- a/Anonymity/10 - “就你机灵”系列/大摔碑手.md
+++ b/Anonymity/10 - “就你机灵”系列/大摔碑手.md
@@ -1,5 +1,5 @@
 # 大摔碑手
-*如果在湖北省博物馆遇见歹徒，能砸碎玻璃掏出越王勾践剑和歹徒击剑吗？]
+*如果在湖北省博物馆遇见歹徒，能砸碎玻璃掏出越王勾践剑和歹徒击剑吗？*
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
