fix format bugs

--- a/Anonymity/01 - 家族答集/尊重的实践.md
+++ b/Anonymity/01 - 家族答集/尊重的实践.md
@@ -5,8 +5,7 @@
 > Last update: *27/06/2021*
 > Link: [[尊重]] [[尊师]] [[傲慢]] [[爹味]]
 > Tag: #方法实践SOP
-> 沙海拾金: [[尊重的实践1.jpg]] [[尊重的实践2.jpg]] [[尊重的实践3.jpg]] [[尊重的实践4.jpg]] [[礼貌与尊重1.jpeg]] [[礼貌与尊重2.jpg]] [[礼貌与尊重3.jpg]]
-[[礼貌与尊重4.JPEG]] [[要赢还是要爽.jpg]] [[人与兽.jpg]] [[职业性残疾.jpg]] [[以直报怨与尊重.jpg]] [[只和天使打交道.jpeg]] [[天使与恶魔.JPEG]]
+> 沙海拾金: [[尊重的实践1.jpg]] [[尊重的实践2.jpg]] [[尊重的实践3.jpg]] [[尊重的实践4.jpg]] [[礼貌与尊重1.jpeg]] [[礼貌与尊重2.jpg]] [[礼貌与尊重3.jpg]] [[礼貌与尊重4.JPEG]] [[要赢还是要爽.jpg]] [[人与兽.jpg]] [[职业性残疾.jpg]] [[以直报怨与尊重.jpg]] [[只和天使打交道.jpeg]] [[天使与恶魔.JPEG]]
 
 论“值得尊重”，用什么论？随时随地举办杰出人类团体大赛吗？这么大规模的评选，用什么标准来搞？谁来搞？只能自己一个人当评委吧？
 
