--- a/Anonymity/01 - 家族答集/解压.md
+++ b/Anonymity/01 - 家族答集/解压.md
@@ -1,4 +1,5 @@
 # 解压
+[中年人的解压方式是回家前在车里安静坐会，那青年人呢？](https://www.zhihu.com/question/390992174)
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
@@ -39,15 +40,7 @@
 
 什么造成压力，就去解决什么，不要去用麻醉解决“压力”本身。
 
-[](https://www.zhihu.com/answer/1413609374)
-
 [知乎用户：人如何克服自己的懒散习性？](https://www.zhihu.com/answer/1413609374)
-
-[](https://www.zhihu.com/answer/1413609374)
-
-[www.zhihu.com](https://www.zhihu.com/answer/1413609374)
-
-[](https://www.zhihu.com/answer/1413609374)
 
 我发现有人可能误解了“解决压力根源”的意思。
 
