--- a/Anonymity/01 - 家族答集/评头论足.md
+++ b/Anonymity/01 - 家族答集/评头论足.md
@@ -1,4 +1,5 @@
 # 评头论足
+[特别不喜欢（反感）别人对自己评头论足，是我的问题吗？还是别人？](https://www.zhihu.com/question/374255946)
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
