--- a/Anonymity/04 - 社科答集/多好算好.md
+++ b/Anonymity/04 - 社科答集/多好算好.md
@@ -1,5 +1,5 @@
 # 多好算好
-[为什么美国总是对中国不友好?](https://www.zhihu.com/question/373687017/answer/1459825925
+[为什么美国总是对中国不友好?](https://www.zhihu.com/question/373687017/answer/1459825925)
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
