--- a/Anonymity/04 - 社科答集/扫黑除恶.md
+++ b/Anonymity/04 - 社科答集/扫黑除恶.md
@@ -1,5 +1,5 @@
 # 扫黑除恶
-[女子实名举报唐山黑社会团伙，称遭囚禁 16 小时，逼迫下跪关狗笼，警方抓获 4 名嫌犯，具体情况如何？](https://www.zhihu.com/question/537242054/answer/2525800100)‘’
+[女子实名举报唐山黑社会团伙，称遭囚禁 16 小时，逼迫下跪关狗笼，警方抓获 4 名嫌犯，具体情况如何？](https://www.zhihu.com/question/537242054/answer/2525800100)
 
 > Author: #Anonymity
 > Last update: *17/06/2022*
