--- a/Anonymity/07 - 军事技术与艺术/为什么我们会输掉认知战.md
+++ b/Anonymity/07 - 军事技术与艺术/为什么我们会输掉认知战.md
@@ -1,4 +1,5 @@
- [为什么我们会输掉认知战](https://zhuanlan.zhihu.com/p/484117834)
+# 为什么我们会输掉认知战
+[为什么我们会输掉认知战](https://zhuanlan.zhihu.com/p/484117834)
 
 > Author: #Anonymity
 > Last update: *25/03/2022*
