--- a/Anonymity/08 - 文艺答集/着色.md
+++ b/Anonymity/08 - 文艺答集/着色.md
@@ -6,7 +6,7 @@
 > Link: [[画画1]] [[画的关键]]
 > Tag:
 
-[着色与Blinn-Phong反射模型​zhuanlan.zhihu.com![图标](https://zhstatic.zhihu.com/assets/zhihu/editor/zhihu-card-default.svg)](https://zhuanlan.zhihu.com/p/364086530)
+[着色与Blinn-Phong反射模型​](https://zhuanlan.zhihu.com/p/364086530)
 
 先看看上面这一篇。
 
