--- a/Anonymity/08 - 文艺答集/视觉艺术品.md
+++ b/Anonymity/08 - 文艺答集/视觉艺术品.md
@@ -10,7 +10,7 @@
 
 [戴珍珠耳环的少女](https://link.zhihu.com/?target=https%3A//b23.tv/ep234535)这个自己看吧。显然是学美术的在拍美术。
 
-[HBO 的Rome 新闻播报员片段剪辑\_哔哩哔哩 (゜-゜)つロ 干杯~-bilibili](https://link.zhihu.com/?target=https%3A//b23.tv/bI2ij7)这是个系列美剧。堪称完美之作。画面构图用光用色堪称古典主义和现代技术的典范。大量的定格镜头完全是冲着油画去的。
+[HBO 的Rome 新闻播报员片段剪辑](https://link.zhihu.com/?target=https%3A//b23.tv/bI2ij7)这是个系列美剧。堪称完美之作。画面构图用光用色堪称古典主义和现代技术的典范。大量的定格镜头完全是冲着油画去的。
 
 历史细节极其考究，贯穿始终。如果是一部电影倒也罢了，难得的是这是一部美剧，集集水准都很高。
 
