--- a/Anonymity/09 - 神学答集/安息日禁令.md
+++ b/Anonymity/09 - 神学答集/安息日禁令.md
@@ -2,7 +2,7 @@
 [跟据犹太律法，安息日掐麦穗吃是否违法？](https://www.zhihu.com/question/28334746/answer/40977196)
 
 > Author: #Anonymity
-> Last update: 03/03/2015
+> Last update: *03/03/2015*
 > Link: [[安息日]]
 > Tag:
 
