--- a/Anonymity/13 - 百年未有之变局/为什么我们会战胜认知战.md
+++ b/Anonymity/13 - 百年未有之变局/为什么我们会战胜认知战.md
@@ -6,7 +6,7 @@
 > Link:
 > Tag:
 
-[为什么我们会输掉认知战1294 赞同 · 165 评论文章](https://zhuanlan.zhihu.com/p/484117834)
+[为什么我们会输掉认知战](https://zhuanlan.zhihu.com/p/484117834)
 
 在上一篇中，我们详细的讨论了为什么基于认知战逻辑的反认知战一定会不利于守方，这显然引出了一个问题——如果认知战一定会输掉，我们要怎么办？
 
@@ -48,6 +48,6 @@
 
 **先为不可胜，以待敌之可胜。**
 
-  #未完待续TBC
+#未完待续TBC
 
 （未完，待续）
