--- a/Anonymity/13 - 百年未有之变局/我们如何战胜认知战.md
+++ b/Anonymity/13 - 百年未有之变局/我们如何战胜认知战.md
@@ -6,7 +6,7 @@
 > Link: [[认知战、信息茧房及其它]] [[为什么我们会输掉认知战]] [[为什么我们会战胜认知战]]
 > Tag:
 
-[为什么我们会战胜认知战345 赞同 · 108 评论文章](https://zhuanlan.zhihu.com/p/484754163)
+[为什么我们会战胜认知战](https://zhuanlan.zhihu.com/p/484754163)
 
 之前我们已经说过——认知战的土壤是对认知战易感的思想尚未发育成熟、怀疑的习惯和技术尚未养成的人群。
 
