--- a/Anonymity/01 - 家族答集/纪实.md
+++ b/Anonymity/01 - 家族答集/纪实.md
@@ -1,5 +1,5 @@
 # “纪实”
-[如何看待作家方方遭举报，被指疫情期间用特权送亲属出境？](https://www.zhihu.com/question/379065733/answer/1079204276
+[如何看待作家方方遭举报，被指疫情期间用特权送亲属出境？](https://www.zhihu.com/question/379065733/answer/1079204276)
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
