--- a/Anonymity/05 - 科学答集/自然科学/猫山王.md
+++ b/Anonymity/05 - 科学答集/自然科学/猫山王.md
@@ -2,7 +2,7 @@
 [猫科动物战斗力那么强，为什么没有将犬科动物淘汰掉？](https://www.zhihu.com/question/51308908/answer/859741831)
 
 > Author: #Anonymity
-> Last update: 13/11/2021*
+> Last update: *13/11/2021*
 > Link: [[占山为王]]
 > Tag:
 
