--- a/Anonymity/13 - 百年未有之变局/一种宣传手法.md
+++ b/Anonymity/13 - 百年未有之变局/一种宣传手法.md
@@ -6,7 +6,7 @@
 > Link:
 > Tag:
 
-[圣母白莲花公主​www.zhihu.com/people/yu-tong-29-47![](https://pic4.zhimg.com/v2-66a9d790da7c28670c8967e7b0d0449b_ipico.jpg)](https://www.zhihu.com/people/yu-tong-29-47)
+[圣母白莲花公主](https://www.zhihu.com/people/yu-tong-29-47)
 
 这个账号的“战报”可以观察一下。
 
