--- a/Anonymity/13 - 百年未有之变局/武力促统.md
+++ b/Anonymity/13 - 百年未有之变局/武力促统.md
@@ -6,7 +6,7 @@
 > Link: [[以武促统]] [[武力和统]]
 > Tag: #待命名TBN
 
-[如何看待 9 月 19 日，解放军 19 架战机进入台西南及西北空域？4410 赞同 · 320 评论回答](https://www.zhihu.com/question/421919244/answer/1482782469)
+[如何看待 9 月 19 日，解放军 19 架战机进入台西南及西北空域？](https://www.zhihu.com/question/421919244/answer/1482782469)
 
 其实我很早就说过，武统早就实质的开始了。
 
