--- a/Anonymity/01 - 家族答集/存在权.md
+++ b/Anonymity/01 - 家族答集/存在权.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 > Last update: *01/09/2021* 
-> Link: [[痛苦根源]] [[反刍痛苦]] [[爱的痛苦]] [[被讨厌]] [[尊重]] [[表态反对]] [[烦躁]] [[FURY]] [[悲观与乐观]] [[责任感]] [[Anonymity/01 - 家族答集/温柔]] [[爱]] [[傲慢]] [[傲慢之路]] [[评论冰箱]] [[Anonymity/03 - 第一性/不幼稚]] 
+> Link: [[痛苦根源]] [[反刍痛苦]] [[爱的痛苦]] [[被讨厌]] [[尊重]] [[表态反对]] [[烦躁]] [[FURY]] [[悲观与乐观]] [[责任感]] [[Anonymity/01 - 家族答集/温柔]] [[爱]] [[傲慢]] [[傲慢之路]] [[评论冰箱]] [[不幼稚]] 
 > Tag: 
 
 如果你并没有纠缠、骚扰、跟踪对方，那么是对方自己需要调适自己的心态解决自己的问题。
