--- a/Anonymity/01 - 家族答集/学理工.md
+++ b/Anonymity/01 - 家族答集/学理工.md
@@ -4,9 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link: [[能力]] [[学好语文]] [[学好会计]] [[文科生]] [[爱]] [[学习的快乐]]
-> Tag: #方法实践SOP 
-
-
+> Tag: #技艺 #杂论
 
 理工科的确从统计上讲文笔比较差。
 
