--- a/Anonymity/01 - 家族答集/富得不幸福.md
+++ b/Anonymity/01 - 家族答集/富得不幸福.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 > Last update: *08/09/2021* 
 > Link: [[财富观]] [[蛋糕大战]] [[穷吗你]] [[穷开心]] [[摆脱贫穷]] [[Anonymity/04 - 社科答集/贫富差距]] 
-> Tag: #方法实践SOP  
+> Tag: #企管
 
 个人资产近4000万，月薪16万，还要加上：
 
