--- a/Anonymity/01 - 家族答集/尊重.md
+++ b/Anonymity/01 - 家族答集/尊重.md
@@ -4,9 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link: [[尊重的实践]] [[傲慢]] 
-> Tag: #方法实践SOP 
-
-
+> Tag: #内外
 
 当你在心里说——“我这样对ta已经够尊重的了”的时候，**你并不算尊重**。
 
