--- a/Anonymity/01 - 家族答集/少小离家老大回.md
+++ b/Anonymity/01 - 家族答集/少小离家老大回.md
@@ -4,9 +4,8 @@
 > Author: #Anonymity 
 > Last update: *6/07/2021* 
 > Link: [[学习的快乐]] [[痛苦根源]]
-> Tag: #方法实践SOP  
+> Tag: #亲子
   
-
 你知道哺乳动物为什么会断奶吗？
 
 因为幼崽没有牙齿，所以吮吸的动作对母亲没有痛苦——甚至还挺舒服的，再加上涨奶很痛，所以母亲是很乐于喂养幼崽的。
