--- a/Anonymity/01 - 家族答集/工程师路线.md
+++ b/Anonymity/01 - 家族答集/工程师路线.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 > Last update: *25/06/2022* 
 > Link: [[物资消毒]] [[SOP - 蒸蛋羹]] [[五分钟厨师]] [[疗愈艺术]] [[循环买卖]] [[买鱼]]
-> Tag: #方法实践SOP #一些推荐 
+> Tag: #处事 #一些推荐 
 
 没钱的话，自己制作简易的[隔音舱](https://www.zhihu.com/search?q=%E9%9A%94%E9%9F%B3%E8%88%B1&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2542170948%7D)成本也很低。
 
