--- a/Anonymity/01 - 家族答集/差不多得了.md
+++ b/Anonymity/01 - 家族答集/差不多得了.md
@@ -4,8 +4,7 @@
 > Author: #Anonymity 
 > Last update: *12/08/2021* 
 > Link: [[当然反驳权]] [[反驳]] [[强盗逻辑]] [[女生不讲理]] [[评论冰箱]] [[说服力的重量]] [[沟通无效]] [[我是对的]] [[看屁股的人]] [[对人不对事]] [[厚颜无耻]] [[Anonymity/01 - 家族答集/纠缠不休]] [[不抱怨]] [[道德绑架]] 
-> Tag: #方法实践SOP   
-
+> Tag: #处事
 
 首先检查一下你是不是确实搞错了处理问题的场合或者的确错用了你的发言权。
 
