--- a/Anonymity/01 - 家族答集/悟性 1.md
+++ b/Anonymity/01 - 家族答集/悟性 1.md
@@ -1,12 +1,10 @@
-      
 # 悟性
 *如何成为一点就透，悟性很高的人？*
 
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link: [[尊师]] [[聪明误]] [[Anonymity/01 - 家族答集/聪明人]] [[两个级别的聪明]] [[聪明的笨功夫]] [[聪明族]] [[认错]] [[极度聪明]] [[蠢聪明]]
-> Tag: #方法实践SOP    
-
+> Tag: #处事 #内外 #家族
 
 这个其实有在别处讲过，但在这里再单独讲一遍。
 
