--- a/Anonymity/01 - 家族答集/悲观与乐观.md
+++ b/Anonymity/01 - 家族答集/悲观与乐观.md
@@ -4,10 +4,8 @@
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link: [[傲慢之路]]
-> Tag: #方法实践SOP 
+> Tag: #家族 #内外
 > 沙海拾金:[[悲观与乐观1.jpg]] [[悲观与乐观2.jpg]] [[悲观与乐观3.jpg]] [[悲观与乐观4.jpg]] [[悲观与乐观5.jpg]] [[悲观与乐观6.jpg]]
-
-
 
 这个问题，存在着很多流行的答案。首先，我们来对可能合格的答案设定一些基本标准：
 
