--- a/Anonymity/01 - 家族答集/烦躁.md
+++ b/Anonymity/01 - 家族答集/烦躁.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 > Last update: *20/07/2021* 
 > Link: [[FURY]] [[悲观与乐观]] [[爱]] [[慈善]] [[不卑不亢]] [[不卑不亢1]] [[谁说了算]] [[苦熬]] [[苦熬 1]] [[信的力量]] [[世界史]]
-> Tag: #方法实践SOP   
+> Tag: #处事
   
 
 烦躁是有结构的。
