--- a/Anonymity/03 - 第一性/女武者.md
+++ b/Anonymity/03 - 第一性/女武者.md
@@ -4,8 +4,7 @@
 > Author: #Anonymity 
 > Last update: *28/08/2021* 
 > Link: [[公权力]] [[危险迹象]] [[自然法]] [[致全体女性]] 
-> Tag: #方法实践SOP 
-
+> Tag: #亲子 #安全
 
 难度并不大。
 
