--- a/Anonymity/03 - 第一性/幸福感.md
+++ b/Anonymity/03 - 第一性/幸福感.md
@@ -4,9 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link: [[爱的痛苦]] [[学习的快乐]] [[安全感]]
-> Tag: #方法实践SOP 
-
-
+> Tag: #家族
 
 幸福不是你背后的路，也不是你远方的目标，
 
