--- a/Anonymity/03 - 第一性/情侣话题.md
+++ b/Anonymity/03 - 第一性/情侣话题.md
@@ -4,10 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link:
-> Tag: #两性 #方法实践SOP 
-
-
-
+> Tag: #两性 #内外
 
 你们年纪还小，还以为感情只是靠有趣来引发和维持，问这个问题，只是想在自己穷尽了有趣的东西之后借助一下别人的存货。
 
