--- a/Anonymity/13 - 百年未有之变局/应急储备.md
+++ b/Anonymity/13 - 百年未有之变局/应急储备.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 > Last update: *16/04/2022* 
 > Link: [[北方菜]] [[做计划]] 
-> Tag: #方法实践SOP 
+> Tag: #处事 #一些推荐 
 
 怎么你们还没有建立基本储备吗？
 
