--- a/摘抄本/比喻摘录.md
+++ b/摘抄本/比喻摘录.md
@@ -2,7 +2,7 @@
 [你听过的最好的比喻是什么？](https://www.zhihu.com/question/20009520/answer/2126305023)
 
 > Author: #Anonymity , 秦绮徽
-> Last update: *23/07/2022* 
+> Last update: *02/09/2022* 
 > 授权许可：[[转载授权_Qin.PNG]]
 
 
@@ -791,12 +791,30 @@ ta们嘴上说的是政治，其实喊的是寂寞而已。
 而这种行为的最大的要害，就在于迷信——或者不如说尚未幻灭于——自己对命运的下意识预测。
 
 按照自己想象的命运来确信自己的命运，是一种不自知的傲慢。
+  
+——夹缝企业——
 
-——
+看出问题来没有——面对这种程度的压力就足以改变立场原则的人，只有死路一条。但凡想活着，就得自己学会对这类色厉内荏的假威慑免疫。
 
   
+
+换言之，既然社会仍然存在，社会的主体就必然是这类不受这种伎俩的人。
+
   
-作者：秦绮徽  
-链接：https://www.zhihu.com/question/20009520/answer/2126305023  
-来源：知乎  
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+社会存在本身，就绝对的证明了这类鬼话没有、不曾有、不会有、也不能被允许有任何实际的威力。
+
+
+哪个社会的公权力不站在被这些话威胁的人一边，而任由这种自相矛盾、肤浅暴戾的东西成为社会的指挥棒，这个社会就会被自然规律、被数学逻辑处死，没有任何宽贷。
+
+  
+
+因此，这类风潮只会存在于一种“不成气候，不值得动手”和“成了气候，必须铲除”的两级夹缝之中。
+
+热衷这个，就像加入了一家“业务不大要饿肚子，业务大了要坐牢”的企业，自己算，这是不是一件值得投入青春的事？
+
+  
+
+这才是关系到你自己生死存亡的事。
+
+  
