--- a/Anonymity/01 - 家族答集/基线.md
+++ b/Anonymity/01 - 家族答集/基线.md
@@ -4,9 +4,8 @@
 > Author: #Anonymity 
 > Last update: *18/09/2021* 
 > Link: [[功罪千秋]] [[原生家庭]] [[谁的问题]] [[脱困]] [[懂事]] [[年轻并不好]] [[犯我犯人]] [[亲近]] [[何为客观]]
-> Tag: #方法实践SOP 
+> Tag: #内外 #亲子
   
-
 评价是非功过，界定基线在哪非常重要。
 
 同样是在你身上每天投入100块开支，你界定的基线是“每天应该给我花一万”，那么对方就是十恶不赦的不承担抚养责任；你界定的是“每天投入200”，那么就是不够尽责；你划定的是50，那么就是照顾有加。
