--- a/Anonymity/01 - 家族答集/多语化.md
+++ b/Anonymity/01 - 家族答集/多语化.md
@@ -4,7 +4,7 @@
  > Author: #Anonymity 
 > Last update: *30/09/2021* 
 > Link: [[世界史]] [[价值框架]] [[家族]] [[语言学]] [[方言]] [[相由言生]] [[适合思辨的语言]] [[能力]] [[学好语文]] [[学习的快乐]]
-> Tag: #方法实践SOP 
+> Tag: #杂论
 
 当然会，所以如果你严肃的打算做点有价值的思考，基本上**必须**要学一门与母语不同源的语言。
 
