--- a/Anonymity/01 - 家族答集/学会.md
+++ b/Anonymity/01 - 家族答集/学会.md
@@ -4,9 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link: [[能力]] [[学好语文]] [[学好会计]] [[学习的快乐]] [[学习的快乐]] [[祷告观]]
-> Tag: #方法实践SOP 
-
-
+> Tag: #职业 #技艺
 
 先回答一个前置问题：
 
