--- a/Anonymity/01 - 家族答集/孰善孰恶.md
+++ b/Anonymity/01 - 家族答集/孰善孰恶.md
@@ -4,9 +4,8 @@
 > Author: #Anonymity 
 > Last update: *12/08/2021* 
 > Link: [[真正善良]] [[善良与现实]] [[Sin]] [[赦罪伦理学]] [[赎罪]] [[功罪千秋]] [[忏悔免罪]] [[爱]] [[慈善]] [[恩]]
-> Tag: #方法实践SOP 
+> Tag: #神学
   
-
 这个问题很好解决——
 
 **在善与恶的问题上，人类没有能力成就绝对的善。也就是从绝对意义上说，人类只有恶的程度是大是小的问题，没有恶不恶的问题。**
