--- a/Anonymity/01 - 家族答集/安慰.md
+++ b/Anonymity/01 - 家族答集/安慰.md
@@ -1,11 +1,10 @@
 # 安慰
 [我们有没有资格安慰别人？如果有，该如何安慰？](https://www.zhihu.com/question/484883057/answer/2104662616)
   
-
 > Author: #Anonymity 
 > Last update: *08/09/2021* 
 > Link: [[同情的资格]] [[以弱悯强]] [[误解]] [[Anonymity/03 - 第一性/赞美]] [[批评与赞美]] 
-> Tag: #方法实践SOP   
+> Tag: #内外
 
 安慰这事有几种经典的做法。
 
