--- a/Anonymity/01 - 家族答集/感动三分钟.md
+++ b/Anonymity/01 - 家族答集/感动三分钟.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 > Last update: *11/12/2021* 
 > Link: [[侠]] [[以弱悯强]] [[德不配位]] [[自弃]] [[厌倦]] [[幸福感]] [[Anonymity/01 - 家族答集/聪明人]] [[聪明的笨功夫]]  [[值得]] [[看得见爱的眼睛]]
-> Tag: #方法实践SOP   
+> Tag: #内外
  
 其实世界是很公平的，你只感动一时，你得到的也就是只感动一时的推动。
 
