--- a/Anonymity/02 - 企管答集/居安思危.md
+++ b/Anonymity/02 - 企管答集/居安思危.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 > Last update: *14/09/2021* 
 > Link: [[勿处实祸]]  [[Anonymity/02 - 企管答集/越界]] [[SOP - 西安地铁]] [[老板及格线]] [[想好再干]] [[辞职]] [[人走茶凉]] [[服从领导]] [[培养]] 
-> Tag: #方法实践SOP  
+> Tag: #职业 #企管
 
 当然是不办。
 
