--- a/Anonymity/03 - 第一性/强奸.md
+++ b/Anonymity/03 - 第一性/强奸.md
@@ -4,9 +4,8 @@
 > Author: #Anonymity
 > Last update: *23/07/2021* 
 > Link: [[威胁勒索]] [[不喜欢]] [[贞操无价]]
-> Tag: #两性  #方法实践SOP 
+> Tag: #两性 
 
- 
 被男友强奸问题就不多说了，太简单——念感情就只分手，不念就报警上法庭。
 
 我们说一个难一点的话题——婚内强奸问题。
