--- a/Anonymity/03 - 第一性/性道德.md
+++ b/Anonymity/03 - 第一性/性道德.md
@@ -4,9 +4,7 @@
 > Author: #Anonymity 
 > Last update: *25/07/2021* 
 > Link: [[Anonymity/03 - 第一性/性]] [[Anonymity/03 - 第一性/性感男人]] [[防早恋]] [[打骨折]] [[恋爱原理]] [[所托非人]] [[理由]] [[卑微]] [[紧追不放]] [[公开换安全]] [[自卑]] [[事业已定]] [[优秀与被爱]] [[不配被爱]] [[爱与自由]] [[凭爱分手]] [[Anonymity/03 - 第一性/爱情 - Romance]] [[前途与爱情]] [[爱]] [[可爱 - Loveable]]  [[被讨厌]] [[无目的]]
-> Tag: #两性 #方法实践SOP  
-
-
+> Tag: #两性
 
 这么说吧，
 
