--- a/Anonymity/03 - 第一性/怨憎会.md
+++ b/Anonymity/03 - 第一性/怨憎会.md
@@ -4,9 +4,8 @@
 > Author: #Anonymity 
 > Last update: *20/07/2021* 
 > Link: [[废没废]] [[不抱怨]] [[时间不够]] [[脱困]] [[被讨厌]] [[自弃]]  [[个人问题]] [[厉害思维]] [[谁的问题]] [[追责]] [[谁说了算]] [[脱困]] [[躺平]] [[懒散]] [[内卷]] [[幸福感]] [[心窄路不宽]] 
-> Tag: #方法实践SOP   
+> Tag: #处事 #两性
 
-  
 你为什么要和这些人一起生活？
 
 如果你能力不足，不得不一直和这些人一起生活，你应该首先增强你的能力，以便获得不必忍受这些的选择余地。
