--- a/Anonymity/03 - 第一性/情感挽回大师.md
+++ b/Anonymity/03 - 第一性/情感挽回大师.md
@@ -4,9 +4,8 @@
  > Author: #Anonymity 
 > Last update: *16/01/2022*  
 > Link: [[爱无筹码]] [[恋爱原理]] [[无条件的爱]] [[不配被爱]]
-> Tag: #方法实践SOP #两性 
+> Tag: #两性 
   
-
 不要参与任何这类“情感挽回”的尝试。
 
 倒不是因为它“不灵”，而是因为它“灵了”会有无穷尽的后患。
