--- a/Anonymity/04 - 社科答集/外交辞令.md
+++ b/Anonymity/04 - 社科答集/外交辞令.md
@@ -4,8 +4,7 @@
 > Author: #Anonymity 
 > Last update: *25/09/2021* 
 > Link: [[燎原幻觉]] [[何为客观]] [[长时间保持理性]] [[接受现实]] [[接受但不允许]] [[不尊重与不接受]] [[武力和统]] [[言之不预]] [[台湾问题]] [[说服力的重量]] [[王天下]] [[傲慢]] [[Anonymity/01 - 家族答集/自信]] [[和平演变]]
-> Tag: #方法实践SOP   
-
+> Tag: #处事
 
 如果你一定要一个外交辞令的话，那么可以这么说：
 
