--- a/Anonymity/13 - 百年未有之变局/大战生存.md
+++ b/Anonymity/13 - 百年未有之变局/大战生存.md
@@ -5,7 +5,7 @@
 > Author: #Anonymity 
 > Last update: *12/08/2022* 
 > Link: [[CIA的追杀]]
-> Tag: #方法实践SOP 
+> Tag: #杂论
 
 世界大战开始，最有效的自保方式就是主动参加作战序列，力求成为战斗力中更核心的因素。
 
